<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_the_max_points_number"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"/>



    <RadioGroup
            android:id="@+id/group_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#dbeceb"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

        <RadioButton
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/_5"/>

        <RadioButton
                android:id="@+id/fifteen"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/_50"/>
        <RadioButton
                android:id="@+id/hundred"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/_100"/>

    </RadioGroup>

    <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="First player pseudo"
            android:ems="10"
            android:id="@+id/firstPlayerPseudo"/>

    <EditText
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Second player pseudo"
            android:ems="10"
            android:id="@+id/SecondPlayerPseudo"/>
    <Button
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_play"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="#00aced"/>
    <Button
            android:text="@string/hall_of_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="#5bc0de"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:id="@+id/hof"/>

    <Button
            android:text="@string/sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e1e8ed"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:id="@+id/sync"/>

</LinearLayout>